[package]
name = "monsoon"
version = "0.1.0"
authors = ["Jean-Baptiste Gosselin <1536838+dennajort@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/dennajort/monsoon"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
