[package]
name = "monsoon"
version = "0.1.0"
authors = ["Jean-Baptiste Gosselin <1536838+dennajort@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/dennajort/monsoon"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
ring = "0.16"
hex = "0.4"
serde_qs = "0.6"
clap = "3.0.0-beta.1"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "0.5", features = ["serde"] }
serde_bencode = "^0.2.2"
reqwest = { version = "0.10" }